--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,3 +31,4 @@ jobs:
       uses: google-github-actions/deploy-appengine@main
       with:
         project_id: ${{ secrets.project_id }}
+        working_directory: tour
